manifests/app/deployment-dp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-app
  namespace: dp-app
  labels:
    app.kubernetes.io/name: dp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dp-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dp-app
    spec:
      containers:
      - name: dp-app
        image: arsalansan/dp-app:latest
        ports:
        - containerPort: 80
