manifests/app/service-dp-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-dp-app
  namespace: dp-app
spec:
  selector: 
    app.kubernetes.io/name: dp-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
