manifests/app/ingress-dp-app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dp-app
  namespace: dp-app
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dp-app.miac.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-dp-app
            port: 
              number: 80
  # tls:
  #   - hosts:
  #     - homework.ru
  #     secretName: nginx-secret
